renaming module to rm, fix lint errors, fix next link visibility bug

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <app-root></app-root>
+        <rm-root></rm-root>
       </div>
     </div>
   </div>
